Change some fonts and fix some layout issues

--- a/master.css
+++ b/master.css
@@ -108,6 +108,7 @@ body
 	background-color: #F6F6F6;
 	float: right;
 	display: inline-block;
+	font-family: "Trebuchet MS", "Arial", sans-serif;
 }
 #connect
 {
@@ -120,14 +121,26 @@ body
 }
 #connect a
 {
-	font-family: "Times New Roman", Times, serif;
+	display: block;
+	font-family: "Trebuchet MS", "Arial", sans-serif;
 	color: #9A9A9A;
 	text-decoration: none;
 	text-align: "justify";
-	position: relative;
-	left: 32px;
-	bottom: 10px;
+	margin-left: 32px;
+	margin-bottom: 5px;
 }
+
+#connect a img
+{
+	vertical-align: middle;
+}
+
+#connect a span.description
+{
+	vertical-align: middle;
+	margin-left: 5px;
+}
+
 #donate
 {
 	border: 4px solid #778899;
@@ -136,6 +149,12 @@ body
 	margin-left: 8px;
 	margin-right: 8px;
 	margin-bottom: 8px;
+	padding-bottom: 12px;
+}
+
+#donate h2
+{
+	font-size: 17px;
 }
 
 #text p
